--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -5,8 +5,17 @@
     <title>User page</title>
 </head>
 <body>
-<h1>User, welcome spring boot security page!</h1>
 
+<a th:text="'id: ' + ${user.id}"></a><br>
+<a th:text="'username: ' + ${user.username}"></a><br>
+<a th:text="'password: ' + ${user.password}"></a><br>
+<a th:text="'age: ' + ${user.age}"></a><br>
+<a th:text="'roles: ' + ${user.roles}"></a><br>
+<!--<a th:href="@{/logout}">Выйти</a>-->
+
+<form th:method="post" th:action="@{/logout}">
+    <input type="submit" value="Выйти">
+</form>
 
 </body>
 </html>
