--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,21 +1,85 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>User page</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+<!--navbar-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand">
+            <div class="text-white">
+                <strong><a th:text="${currentUser.username}"></a></strong>
+                <a th:text="' with roles: ' + ${currentUser.roles}"></a>
+            </div>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav  ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Logout</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-<a th:text="'id: ' + ${user.id}"></a><br>
-<a th:text="'username: ' + ${user.username}"></a><br>
-<a th:text="'password: ' + ${user.password}"></a><br>
-<a th:text="'age: ' + ${user.age}"></a><br>
-<a th:text="'roles: ' + ${user.roles}"></a><br>
-<!--<a th:href="@{/logout}">Выйти</a>-->
+<div class="container-fluid">
+    <div class="row">
+        <!--vertical nav-->
+        <div class="col-2 mt-3">
+            <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                <button class="nav-link active text-start" id="v-pills-user-tab" data-bs-toggle="pill"
+                        data-bs-target="#v-pills-user" type="button" role="tab" aria-controls="v-pills-user"
+                        aria-selected="true">User
+                </button>
+            </div>
+        </div>
 
-<form th:method="post" th:action="@{/logout}">
-    <input type="submit" value="Выйти">
-</form>
+        <div class="col-10 bg-light min-vh-100">
+            <!--user tab content-->
+            <div class="tab-pane fade show active" id="v-pills-user" role="tabpanel" aria-labelledby="v-pills-user-tab">
+                <h1 class="py-3 ps-3">User information-page</h1>
 
+                <div class="bg-light py-2 ps-3 border rounded rounded-bottom-0">
+                    <h3>About user</h3>
+                </div>
+
+                <div class="p-3 bg-white border rounded rounded-top-0">
+                    <table class="table table-striped">
+                        <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Username</th>
+                            <th>Age</th>
+                            <th>Role</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td th:utext="${currentUser.id}">ID</td>
+                            <td th:utext="${currentUser.username}">Username</td>
+                            <td th:utext="${currentUser.age}">Age</td>
+                            <td th:utext="${currentUser.roles}">Roles</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 </html>
