Выполнил задание с RestAPI

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>This is the index page</h1>
-<a href="/admin">admin page</a>
+<a href="/api/admin">admin page</a>
 <br>
-<a href="/user">user page</a>
+<a href="/api/user">user page</a>
 </body>
 </html>
