--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -14,8 +14,8 @@
     <div class="container-fluid">
         <a class="navbar-brand">
             <div class="text-white">
-                <strong><a th:text="${currentUser.username}"></a></strong>
-                <a th:text="' with roles: ' + ${currentUser.roles}"></a>
+                <strong><a id="currentUserUsername">user</a></strong>
+                <a id="currentUserRoles">roles</a>
             </div>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="p-3 bg-white border rounded rounded-top-0">
-                    <table class="table table-striped">
+                    <table class="table table-striped" id="userTable">
                         <thead>
                         <tr>
                             <th>ID</th>
@@ -63,14 +63,7 @@
                             <th>Role</th>
                         </tr>
                         </thead>
-                        <tbody>
-                        <tr>
-                            <td th:utext="${currentUser.id}">ID</td>
-                            <td th:utext="${currentUser.username}">Username</td>
-                            <td th:utext="${currentUser.age}">Age</td>
-                            <td th:utext="${currentUser.roles}">Roles</td>
-                        </tr>
-                        </tbody>
+                        <tbody></tbody>
                     </table>
                 </div>
             </div>
@@ -81,5 +74,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+<script th:src="@{/userJs/userPage.js}"></script>
 </body>
 </html>
